SF-Custom-Objects/salesforce_ant_46.0/sample/codepkg/objects/Ocean_Vpc_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Account_Name__c</fullName>
        <label>AWS Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_VPCs__c</fullName>
        <label>Number of VPCs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OCEAN_REQUEST</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipName>Ocean_vpc</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <label>Tenancy</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Tenancy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPC_Request_Id__c</fullName>
        <displayFormat>OCEAN-VPC-{00000}</displayFormat>
        <label>VPC Request Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Wave_Submitted__c</fullName>
        <label>Wave Submitted</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Ocean_Vpc_Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Application__c</columns>
        <columns>CSP_Option_Year__c</columns>
        <columns>AWS_Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>VPC ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean_Vpc_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>